--- a/components/Footer.module.css
+++ b/components/Footer.module.css
@@ -1,7 +1,7 @@
 .footer {
   margin-top: auto;
   text-align: center;
-  margin-bottom: 1rem;
+  padding-bottom: 1rem;
 }
 
 .link {
