--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,8 +20,10 @@ a {
   box-sizing: border-box;
 }
 
-@media screen and (min-width: 890px) {
+@media screen and (min-width: 891px) {
+  html,
   body {
     overflow-x: hidden;
+    position: relative;
   }
 }
